[package]
name = "egui-wgpu-x11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
egui = "0.19"
egui_demo_lib = "0.19"
egui_wgpu_backend = "0.20"
env_logger = "0.10"
fontconfig = "0.6"
pollster = "0.2"
raw-window-handle = "0.5"
wgpu = "0.14"
x11rb = { version = "0.11", features = ["xfixes", "allow-unsafe-code"] }
